Package_Tools/include-C/gst/123_in_arbeit/base/gstbytereader.pp


(* Const before type ignored *)
function gst_byte_reader_get_string_utf8(reader:PGstByteReader; str:PPgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_byte_reader_peek_string_utf8(reader:PGstByteReader; str:PPgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_byte_reader_masked_scan_uint32(reader:PGstByteReader; mask:Tguint32; pattern:Tguint32; offset:Tguint; size:Tguint):Tguint;cdecl;external;
(* Const before type ignored *)
function gst_byte_reader_masked_scan_uint32_peek(reader:PGstByteReader; mask:Tguint32; pattern:Tguint32; offset:Tguint; size:Tguint; 
           value:Pguint32):Tguint;cdecl;external;
{*
 * GST_BYTE_READER_INIT:
 * @data: Data from which the #GstByteReader should read
 * @size: Size of @data in bytes
 *
 * A #GstByteReader must be initialized with this macro, before it can be
 * used. This macro can used be to initialize a variable, but it cannot
 * be assigned to a variable. In that case you have to use
 * gst_byte_reader_init().
  }
{#define GST_BYTE_READER_INIT(data, size) data, size, 0 }
{ unchecked variants  }
{ xxxxxxxxxxxxxxxxxxxxxxxxx }
{static inline void }
{gst_byte_reader_skip_unchecked (GstByteReader * reader, guint nbytes) }
{ }
{  reader->byte += nbytes; }
{ }
{
#define __GST_BYTE_READER_GET_PEEK_BITS_UNCHECKED(bits,type,lower,upper,adj) \
\
static inline type \
gst_byte_reader_peek_##lower##_unchecked (const GstByteReader * reader) \
 \
  type val = (type) GST_READ_##upper (reader->data + reader->byte); \
  adj \
  return val; \
 \
\
static inline type \
gst_byte_reader_get_##lower##_unchecked (GstByteReader * reader) \
 \
  type val = gst_byte_reader_peek_##lower##_unchecked (reader); \
  reader->byte += bits / 8; \
  return val; \

 }
{$undef __GET_PEEK_BITS_UNCHECKED}
{
static inline const guint8 *
gst_byte_reader_peek_data_unchecked (const GstByteReader * reader)

  return (const guint8 *) (reader->data + reader->byte);


static inline const guint8 *
gst_byte_reader_get_data_unchecked (GstByteReader * reader, guint size)

  const guint8 *data;

  data = gst_byte_reader_peek_data_unchecked (reader);
  gst_byte_reader_skip_unchecked (reader, size);
  return data;


static inline guint8 *
gst_byte_reader_dup_data_unchecked (GstByteReader * reader, guint size)

  gconstpointer data = gst_byte_reader_get_data_unchecked (reader, size);
  guint8 *dup_data = (guint8 *) g_malloc (size);

  memcpy (dup_data, data, size);
  return dup_data;



static inline guint
_gst_byte_reader_get_pos_unchecked (const GstByteReader * reader)

  return reader->byte;


static inline guint
_gst_byte_reader_get_remaining_unchecked (const GstByteReader * reader)

  return reader->size - reader->byte;


static inline guint
_gst_byte_reader_get_size_unchecked (const GstByteReader * reader)

  return reader->size;


static inline guint
_gst_byte_reader_get_remaining_inline (const GstByteReader * reader)

  g_return_val_if_fail (reader != NULL, 0);

  return _gst_byte_reader_get_remaining_unchecked (reader);


static inline guint
_gst_byte_reader_get_size_inline (const GstByteReader * reader)

  g_return_val_if_fail (reader != NULL, 0);

  return _gst_byte_reader_get_size_unchecked (reader);


#define __GST_BYTE_READER_GET_PEEK_BITS_INLINE(bits,type,name) \
\
static inline gboolean \
_gst_byte_reader_peek_##name##_inline (const GstByteReader * reader, type * val) \
 \
  g_return_val_if_fail (reader != NULL, FALSE); \
  g_return_val_if_fail (val != NULL, FALSE); \
  \
  if (_gst_byte_reader_get_remaining_unchecked (reader) < (bits / 8)) \
    return FALSE; \
\
  *val = gst_byte_reader_peek_##name##_unchecked (reader); \
  return TRUE; \
 \
\
static inline gboolean \
_gst_byte_reader_get_##name##_inline (GstByteReader * reader, type * val) \
 \
  g_return_val_if_fail (reader != NULL, FALSE); \
  g_return_val_if_fail (val != NULL, FALSE); \
  \
  if (_gst_byte_reader_get_remaining_unchecked (reader) < (bits / 8)) \
    return FALSE; \
\
  *val = gst_byte_reader_get_##name##_unchecked (reader); \
  return TRUE; \

  }
{$undef __GST_BYTE_READER_GET_PEEK_BITS_INLINE}
{$ifndef GST_BYTE_READER_DISABLE_INLINES}
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

function gst_byte_reader_init(reader,data,size : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_remaining(reader : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_size(reader : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_pos(reader : longint) : longint;

{ we use defines here so we can add the G_LIKELY()  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint8(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int8(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint16_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int16_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint16_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int16_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint24_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int24_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint24_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int24_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint32_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int32_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint32_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int32_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint64_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int64_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint64_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int64_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint8(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int8(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint16_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int16_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint16_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int16_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint24_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int24_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint24_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int24_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint32_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int32_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint32_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int32_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint64_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int64_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_uint64_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_int64_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_float32_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_float32_be(reader,val : longint) : longint;
